web-client/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .text-input {
    @apply shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight;
  }

  .text-input:focus {
    @apply outline-none ring;
  }

  .btn {
    @apply shadow text-white font-bold py-2 px-4 rounded
  }
  .btn-purple {
    @apply bg-purple-500;
  }
  .btn-blue {
    @apply bg-blue-500;
  }
  .btn-blue-reverse {
    @apply bg-white text-blue-500;
  }
  .btn-white {
    @apply bg-white text-black duration-0;
  }
  .btn:hover {
    @apply border-inherit
  }
  .btn:focus {
    @apply ring outline-none
  }
  .btn-purple:hover {
    @apply bg-purple-400;
  }
  .btn-blue:hover {
    @apply bg-blue-400;
  }
  .btn-blue-reverse:hover {
    @apply bg-gray-100;
  }
  .btn-white:hover {
    @apply bg-gray-100;
  }

  .link-fix {
    @apply w-full
  }
}

:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

